# rsspire

./: .gitignore  Cargo.toml  postbuild.sh  rustfmt.toml
.cargo/: config
nspire-sys/: Cargo.toml  build.rs  wrapper.h
nspire-sys/src/: lib.rs  libc.rs
src/: cstr.rs  global_allocator.rs  main.rs
